--- a/Report/main.tex
+++ b/Report/main.tex
@@ -22,9 +22,10 @@ top=2cm,bottom=2cm,bindingoffset=0cm]{geometry}
 \definecolor{codegreen}{rgb}{0,0.6,0}
 \definecolor{codegray}{rgb}{0.5,0.5,0.5}
 \definecolor{codepurple}{rgb}{0.58,0,0.82}
-\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+\definecolor{backcolour}{RGB}{185,185,185}
 
-\lstdefinestyle{mystyle}{
+\lstdefinestyle{bashstyle}{
+	language=bash,
 	backgroundcolor=\color{backcolour},   
 	commentstyle=\color{codegreen},
 	keywordstyle=\color{magenta},
@@ -40,6 +41,9 @@ top=2cm,bottom=2cm,bindingoffset=0cm]{geometry}
 	showtabs=false,                  
 	tabsize=2
 }
+
+\lstset{style=bashstyle}
+
 
 \begin{document}
 	
@@ -66,7 +70,7 @@ top=2cm,bottom=2cm,bindingoffset=0cm]{geometry}
 
 \begin{flushright}
 	\textbf{выполнил:}\\
-	Петров Тимур \\
+	Петров Т.\,П. \\
 	группа 504
 \end{flushright}
 
@@ -89,19 +93,29 @@ top=2cm,bottom=2cm,bindingoffset=0cm]{geometry}
 
 \subsection{Краткое описание задания}
 
+Необходимо реализовать многопоточную программу для решения систем линейных алгебраических уравнений (СЛАУ) на неструктурированной сетке с использованием OpenMP. Алгоритм должен состоять из нескольких этапов:
+
+\begin{enumerate}
+	\item Генерация графа сетки и его матричного представления – создание графа, связей элементов и его представление в разреженном формате CSR
+	\item Заполнение матрицы СЛАУ – построение матрицы коэффициентов и вектора правой части с использованием тестовых формул
+	\item Решение СЛАУ – реализация итерационного метода сопряженных градиентов для решения уравнения с поддержкой параллелизма
+	\item Проверка производительности – измерение времени выполнения каждого этапа и анализ многопоточного ускорения и эффективности алгоритма
+\end{enumerate}
+
+
 \subsection{Краткое описание программной реализации}
 
-Для запуска на локальных системах используется следующая команда:
-
-\begin{lstlisting}{bash}
-	OMP_NUM_THREADS=k ./a.out Nx Ny K1 K2
-\end{lstlisting}
-
-Для запуска на кластере, использующем систему очередей, запускается скрипт со следующими параметрами.
+...
 
 \subsection{Описание опробованных способов оптимизации последовательных вычислений}
 
-sdfs
+\begin{itemize}
+	\item AVX \\
+	...
+	\item FMA \\
+	...
+\end{itemize}
+
 
 \newpage
 
@@ -123,7 +137,22 @@ sdfs
 	\end{tabular}
 \end{center}
 
-\lstset{style=mystyle}
+Для запуска на локальных системах используется следующая команда:
+
+\begin{lstlisting}{bash}
+	OMP_NUM_THREADS=k ./a.out Nx Ny K1 K2
+\end{lstlisting}
+
+Для запуска на кластере, использующем систему очередей, запускается скрипт со следующими параметрами.
+
+\begin{lstlisting}{bash}
+	mpisubmit.pl params a.out -- a.out params
+\end{lstlisting}
+
+Также необходимо редактирование командного файла для запуска на заданных узлах.
+
+...
+
 
 \subsection{Результаты измерений производительности}
 
