--- a/Report/main.tex
+++ b/Report/main.tex
@@ -81,7 +81,7 @@ top=2cm,bottom=2cm,bindingoffset=0cm]{geometry}
 \vfill
 
 \begin{center}
-	15 ноября \\
+	18 ноября \\
 	Москва, 2024
 \end{center}
 
@@ -114,49 +114,13 @@ top=2cm,bottom=2cm,bindingoffset=0cm]{geometry}
 
 \newpage
 
-\subsection{Краткое описание программной реализации}
-
-...
-
-\subsubsection{Запуск программы}
-
-Для запуска на локальных системах достаточно указать количество нитей, а также все необходимые входные данные:
-
-\begin{lstlisting}{bash}
-	OMP_NUM_THREADS=k ./CGSolver Nx Ny K1 K2
-\end{lstlisting}
-
-Для запуска на кластере, использующем систему очередей, запускается скрипт со следующими параметрами:
-
-\begin{lstlisting}{bash}
-	mpisubmit.pl -t k CGSolver -- Nx Ny K1 K2
-\end{lstlisting}
-
-Однако желательно редактирование командного файла для запуска на заданных узлах и привязки к определенному сокету узла.
-
-\begin{lstlisting}{bash}
-	source /polusfs/setenv/setup.SMPI
-	#BSUB -W 00:15
-	#BSUB -o CGSolver.%J.out
-	#BSUB -e CGSolver.%J.err
-	#BSUB -m polus-c4-ib
-	#BSUB -R affinity[core(10):distribute=pack(socket=1)]
-	OMP_NUM_THREADS=k
-	/polusfs/lsf/openmp/launchOpenMP.py CGSolver Nx Ny K1 K2
-\end{lstlisting}
-
-
-\newpage
-
-\section{Исследование производительности}
-
-\subsection{Характеристики вычислительной системы}
+\subsection{Характеристики вычислительной системы и сборка}
 
 \begin{center}
 	\setlength{\tabcolsep}{30pt}
-	\renewcommand{\arraystretch}{1.5}
+	\renewcommand{\arraystretch}{1}
 	\begin{tabular}{ c|c|c } 
-		 & PC & Polus \\ 
+		& PC & Polus node \\ 
 		\hline
 		CPU  & i5-12400F & IBM POWER 8 \\ 
 		Cores & 6 & 10 \\ 
@@ -171,17 +135,66 @@ top=2cm,bottom=2cm,bindingoffset=0cm]{geometry}
 
 \begin{lstlisting}[escapechar=!]{bash}
 	mkdir build && cd build
-	cmake -DENABLE_TESTS=<!\color{cyan}On!|Off> -DUSE_DEBUG_MODE=<On|!\color{cyan}Off!> ..
+	cmake -DENABLE_TESTS=<!\color{cyan}On!|Off> -DUSE_DEBUG_MODE=<On|!\color{cyan}Off!> -DUSE_MPI=<On|!\color{cyan}Off!> ..
 	make -j 4
 	cd ../bin
 \end{lstlisting}
 
-Также на локальных системах можно запустить несколько простых тестов для проверки корректности работы программы (при условии, что на этапе сборки флаг ENABLE\_TESTS был включен):
+Также на локальных системах можно запустить несколько простых тестов для проверки корректности работы OpenMP программы (при условии включения флага ENABLE\_TESTS):
 
 \begin{lstlisting}{bash}
 	cd build/Tests
 	ctest
 \end{lstlisting}
+
+\subsection{Запуск}
+
+Для запуска на локальных системах достаточно указать количество нитей, а также все необходимые входные данные:
+
+\begin{lstlisting}{bash}
+	OMP_NUM_THREADS=k ./CGSolver Nx Ny K1 K2
+\end{lstlisting}
+
+Для запуска на кластере, использующем систему очередей, запускается скрипт со следующими параметрами:
+
+\begin{lstlisting}{bash}
+	mpisubmit.pl -t k CGSolver -- Nx Ny K1 K2
+\end{lstlisting}
+
+Однако желательно редактирование командного файла для запуска на заданных узлах и привязки нитей к ядрам.
+
+\begin{lstlisting}{bash}
+	#BSUB -o out/CGSolver.%J.out
+	#BSUB -e out/CGSolver.%J.err
+	#BSUB -m polus-c4-ib
+	#BSUB -R affinity[core(20)]
+	OMP_NUM_THREADS=k
+	/polusfs/lsf/openmp/launchOpenMP.py bin/CGSolver Nx Ny K1 K2
+\end{lstlisting}
+
+Для запуска MPI версии программы локально (обязательно следует указывать число нитей на один MPI процесс OMP\_NUM\_THREADS=M, иначе по умолчанию будет общее число доступных нитей, что существенно замедлит выполнение):
+
+\begin{lstlisting}{bash}
+	OMP_NUM_THREADS=M mpiexec -n N bin_mpi/CGSolver Nx Ny K1 K2 Px Py
+\end{lstlisting}
+
+и на кластере:
+
+\begin{lstlisting}[escapechar=!]{bash}
+	source /polusfs/setenv/setup.SMPI
+	#BSUB -n N
+	#BSUB -x
+	#BSUB -o out/MPI/CGSolverMeasure.%J.out
+	#BSUB -e out/MPI/CGSolverMeasure.%J.err
+	#BSUB -R "span[ptile=N/2] affinity[core(1)]"
+	#BSUB -m "polus-c2-ib polus-c4-ib"
+	export OMP_NUM_THREADS=M
+	mpiexec --!\color{black}bind!-to core --map-by core bin_mpi/CGSolver Nx Ny K1 K2 Px Py
+\end{lstlisting}
+
+\newpage
+
+\section{OpenMP реализация}
 
 
 \subsection{Результаты измерений производительности}
@@ -275,7 +288,7 @@ top=2cm,bottom=2cm,bindingoffset=0cm]{geometry}
 		\includegraphics[width=85mm]{multithread_polus_spmv2} & \includegraphics[width=85mm]{multithread_polus_cgsolver2} \\
 		(в) SpMV & (г) CGSolver \\[6pt]
 	\end{tabular}
-	\caption{Зависимость производительности от числа нитей (Polus)}
+	\caption{Зависимость производительности от числа нитей на двухсокетной конфигурации (Polus)}
 	\label{fig:multithread_flops_polus2} 
 \end{figure}
 
@@ -296,13 +309,13 @@ top=2cm,bottom=2cm,bindingoffset=0cm]{geometry}
 		CGSolve & 1.98 & 3.86 & 7.19 & 13.43 & 19.63 & 21.34 & 26.18 & 30.03 & 31.73 & 32.27 \\
 		\hline
 	\end{tabular}
-	\caption{Расчеты ускорения для каждой из операций на двухсокетной конфигурации при $N = 1e8$ (Polus)}
+	\caption{Расчеты ускорения для каждой из операций на двухсокетной конфигурации при $N = 10^8$ (Polus)}
 	\label{fig:speedup2}
 \end{figure}
 
 \newpage
 
-\section{Анализ полученных результатов}
+\subsection{Анализ полученных результатов}
 
 $ TPP_{PC} = 4\ GHz \cdot 6\ Cores \cdot 2\ Threads/Core \cdot 512/64 = 384\ GFLOPS $ 
 
@@ -361,7 +374,9 @@ $ TBP_{Polus, SpMV} = \min(290\ GFLOPS, 153,6\ GB/s \cdot 1/11) = 14\ GFLOPS $
 	\label{fig:tbps}
 \end{figure}
 
-\section{MPI}
+\section{MPI реализация}
+
+\subsection{Параллельное ускорение}
 
 \begin{figure}[H]
 	\center
@@ -371,11 +386,13 @@ $ TBP_{Polus, SpMV} = \min(290\ GFLOPS, 153,6\ GB/s \cdot 1/11) = 14\ GFLOPS $
 		\includegraphics[width=85mm]{mpi_polus_spmv} & \includegraphics[width=85mm]{mpi_polus_cgsolver} \\
 		(в) SpMV & (г) CGSolver \\[6pt]
 	\end{tabular}
-	\caption{Зависимость производительности от числа нитей (Polus)}
+	\caption{Зависимость производительности от числа процессов (Polus)}
 	\label{fig:mpi_flops_polus} 
 \end{figure}
 
 \newpage
+
+\subsection{Сравнение с OpenMP}
 
 \begin{figure}[H]
 	\center
@@ -385,8 +402,29 @@ $ TBP_{Polus, SpMV} = \min(290\ GFLOPS, 153,6\ GB/s \cdot 1/11) = 14\ GFLOPS $
 		\includegraphics[width=85mm]{compare_spmv} & \includegraphics[width=85mm]{compare_cgsolver} \\
 		(в) SpMV & (г) CGSolver \\[6pt]
 	\end{tabular}
-	\caption{Зависимость производительности от числа нитей (Polus)}
+	\caption{Сравнение производительности при $N = 10^8$ (Polus)}
 	\label{fig:mpi_flops_comapre} 
+\end{figure}
+
+\begin{figure}[H]
+	\center
+	\setlength{\tabcolsep}{6pt}
+	\renewcommand{\arraystretch}{1.3}
+	\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+		\hline
+		T & 2 & 4 & 8 & 16 & 32 & 40 & 64 & 80 & 120 & 160 & 240 & 320  \\
+		\hline
+		Dot & 1.93 & 3.62 & 7.71 & 13.63 & 28.75 & 36.39 & 41.90 & 52.19 & 57.91 & 65.93 & 69.57 & 72.53 \\
+		\hline
+		AXpY & 1.96 & 3.94 & 7.65 & 14.26 & 29.06 & 36.25 & 42.54 & 52.40 & 56.58 & 67.85 & 70.58 & 72.15  \\
+		\hline
+		SpMV & 1.71 & 3.42 & 6.16 & 11.98 & 24.02 & 30.93 & 37.32 & 45.74 & 49.18 & 55.39 & 61.21 & 63.71  \\
+		\hline
+		CGSolve & 1.75 & 3.39 & 6.64 & 13.05 & 24.91 & 28.92 & 37.97 & 43.17 & 50.34 & 59.49 & 62.25 & 66.88 \\
+		\hline
+	\end{tabular}
+	\caption{Расчеты ускорения в MPI режиме при $N = 10^8$ (Polus)}
+	\label{fig:speedup3}
 \end{figure}
 
 
