--- a/Report/main.tex
+++ b/Report/main.tex
@@ -42,7 +42,7 @@ top=2cm,bottom=2cm,bindingoffset=0cm]{geometry}
 	showstringspaces=false,
 	showtabs=false,                  
 	tabsize=2,
-	emph={make, cmake, mkdir, ctest},
+	emph={make, cmake, mkdir, ctest, mpiexec},
 	emphstyle = {\color{magenta}},
 }
 
@@ -81,7 +81,7 @@ top=2cm,bottom=2cm,bindingoffset=0cm]{geometry}
 \vfill
 
 \begin{center}
-	18 ноября \\
+	18 декабря \\
 	Москва, 2024
 \end{center}
 
@@ -147,7 +147,7 @@ top=2cm,bottom=2cm,bindingoffset=0cm]{geometry}
 	ctest
 \end{lstlisting}
 
-\subsection{Запуск}
+\subsection{Запуск программы}
 
 Для запуска на локальных системах достаточно указать количество нитей, а также все необходимые входные данные:
 
